# hire-hustle

./: Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  jobs.go  main.go  query.sql  schema.sql  sqlc.yaml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routes/: ai.py  jobs.py
backend/app/services/: ai_service.py
db/: models.go  query.sql.go
frontend/: components.json  package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts  types.ts
frontend/app/components/: add-job-dialog.tsx  edit-job-dialog.tsx  job-list.tsx
frontend/app/components/job-detail/: ai-content-tabs.tsx  job-description.tsx  job-header.tsx  job-keywords.tsx
frontend/app/components/jobs/: job-search.tsx  job-status-badge.tsx
frontend/app/components/layout/: page-header.tsx
frontend/app/hooks/: use-ai-content.ts  use-create-job.ts  use-delete-job.ts  use-job.ts  use-jobs.ts  use-update-job.ts
frontend/app/lib/: api.ts
frontend/app/routes/: home.tsx  job-detail.tsx
frontend/app/types/: index.ts
migrations/: 00001_create_job_table.sql  00002_add_notes_field.sql  00002_ai_content_table.sql  00003_drop_ai.sql
